# WoldVirtual3DlucIA

./: .gitignore  Config.py  ESTADO_PROYECTO_78_ACTUAL.md  ESTRATEGIAS_ACELERACION_DESARROLLO.md  MIT.md  PROGRESS_TRACKER.md  README.md  clean_api_keys.py  guia_progreso_cursos_ia.md  lucia-3d-core.ts  lucia-animations.ts  lucia-demo.html  lucia-documentation.md  lucia-environment.ts  lucia-main.ts  lucia-voice-system.ts  mejores_practicas_desarrollo_cursos_ia.md  package-lock.json  package.json  reemplazo.txt  tsconfig.build.json  tsconfig.json  tsconfig.node.json
.bin/: .eslintrc.js  .gitignore  BinTypes.ts  BinaryManager.ts  ESTADO_FINAL_SISTEMA.md  README.md  README_REACT.md  informacion_y_flujodetrabajo.md  package-lock.json  package.json  start-system.js  tsconfig.json  webpack.config.js
.bin/.automation/: .gitignore  auto-trigger.js  scheduler.js  workflow-manager.js
.bin/bk_.bin/: JERARQUIA.MD  (+3 more)
.bin/editor3d/engine/: .gitignore  COMPLETION_STATUS.md  Cargo.toml
.bin/editor3d/engine/config/: engine_config.json
.bin/editor3d/engine/src/: lib.rs
.bin/editor3d/engine/src/camera/: mod.rs
.bin/editor3d/engine/src/physics/: distributed.rs  mod.rs
.bin/editor3d/engine/src/profiling/: mod.rs
.github/: .gitignore  GitHubTypes.ts  README.md  quemas_sepuede_poner.md
Include/: blacklist.json  metaverse_security.json  security_config.json  whitelist.json
assets/: .eslintrc.js  .gitignore  QUICK_START.md  jest.config.js  package-lock.json  package.json  package.json.backup.1751583436471  tsconfig.json
backups/: .gitignore  README.md
bloc/: .gitignore  GITIGNORE_VERIFICATION.md  README.md  SECURITY_CHECK.md  foundry.toml  package.json  verify-security.ps1
bloc/woldbkvirtual/contracts/rust/: Cargo.toml
bloc/woldbkvirtual/contracts/rust/src/: lib.rs
cli/: CLICommands.ts  package-lock.json  package.json
client/: AVATAR_SYSTEM.md  ClientModule.ts  README_REFACTORIZACION.md  avatares.html  env.example  gltfloader.js  index.html  package-lock.json  package.json  package.json.backup.1751640765102  tsconfig.build.json  tsconfig.json
components/: .eslintrc.js  ComponentTypes.ts  README.md  ThreeScene.tsx  package-lock.json  package.json
config/: ConfigModule.ts  instrucciones de uso.md  metaverso-config.json  package-lock.json  package.json  pyproject.toml
config/bk_config/: .gitignore  jest.config.js  package.json.backup.1751583397128  recovery_script.py
config/bk_config/scripts/: README.md  cleanup-backups.js  fix-json-syntax.js  quick-start.sh  setup-env.js
config/bk_config/scripts/scripts/: GUIA_EDITOR_3D_COMPLETA.md  resolve-secrets-issue.js
config/bk_config/src/core/: settings.py
config/config/: README.md
config/config/src/core/: loaders.py
config/contracts/: addresses.json
config/core/: CentralModuleCoordinator.ts  DynamicInstantiationManager.ts  InterModuleMessageBus.ts  ModuleGroups.ts
config/core/variables/: colors.css
config/environments/: README_ENV_SETUP.md  development.env  development.env.example
config/networks/: ethereum.json  polygon.json
config/src/: __init__.py
config/src/core/: validators.py
core/: .gitignore  CentralModuleCoordinator.ts  DependencyResolver.ts  ModuleLoader.ts  PerformanceMonitor.ts  README.md
css/: globals.css
docs/: .gitignore  ANALISIS_COMPLETO_IMPLEMENTACION.md  DOCKER_COMPOSE_UBICACION.md  DYNAMIC_INSTANTIATION_ANALYSIS.md  FASE_11_COMPLETADA.md  FASE_3_COMPLETADA.md  FASE_5_COMPLETADA.md  FASE_8_COMPLETADA.md  FILE_DISTRIBUTION_ANALYSIS.md  PRIORIDADES_MEDIAS_COMPLETADAS.md  PROGRESS_TRACKER.md  PROGRESS_VISUAL.md  SISTEMA_MODULAR_IMPLEMENTADO.md  informacionde_como  utilizar cada  carpeta especial.md
entities/: .eslintrc.js  ARCHITECTURE.md  jest.config.js  package-lock.json  package.json
fonts/: .eslintrc.js  ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.json
helpers/: jest.config.js  package-lock.json  package.json  tsconfig.json
image/: package-lock.json  package.json
javascript/: islands-config.js  threejs-particle-system.js
js/: .gitignore  advanced-networking-system.js  advanced-rendering-system.js  async.js  counter.js  sync.js  threejs-advanced-core.js  threejs-audio-system.js  threejs-physics-system.js  threejs-utils.js
languages/: .gitignore  package-lock.json  package.json
middlewares/: avatar-physics.js
models/: .gitignore  README.md  avatar-database.js  avatar-generator-service.js  avatar-randomizer.js
modules/: main.py
package/: apollo-package-manager.js  env.example  info.json  información.md  package.json  schema.js
pages/: PLAN_ACCION_DETALLADO.md  page-router.js  page-transitions.js
public/: .gitignore  index.html  package-lock.json
scripts/: .gitignore  clean-secrets.js  fix-all-conflicts.js  fix-package-conflicts.js  fix-workspace-deps.js  init.js  install-dependencies.js  performance-optimizer.js  resolve-conflicts.js  setup-metaverso.js  start-platform.js  test-metaverso.js
services/: AudioService.ts  BlockchainService.ts  README.md  ServiceHealthMonitor.ts  ServiceManager.ts  ServiceRegistry.ts  audio-service.js  blockchain-service.js  security-service.js  service-manager.js
src/: .gitignore  App.css  App.tsx
test/: ADVANCED_TEST_README.md  ANALISIS_CONFLICTOS_RESUELTOS.md  IMPLEMENTACION_TEST_AVANZADO.md  advanced-system-test.js  setup.js  system-test-suite.js  test-report.json
web/: .gitignore  README.md  index.html  jest.config.js  metaverso-platform-core.js  platform-initializer.js
(+1746 files in other folders)
