[package]
name = "metaverso-engine"
version = "0.1.0"
edition = "2021"
description = "Núcleo 3D Distribuido para Metaverso Web3"
license = "MIT"
authors = ["Metaverso Team <team@metaverso.dev>"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "metaverso_engine"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# WebAssembly
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Physics and Math
nalgebra = "0.32"
rapier3d = "0.17"
glam = "0.24"

# Networking
quinn = "0.10"
webtransport = "0.1"
libp2p = { version = "0.52", features = ["tokio", "tcp", "noise", "macros"] }

# ECS (Entity Component System)
bevy = "0.12"
bevy_rapier = "0.22"

# Async and Concurrency
async-trait = "0.1"
futures = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
aes = "0.8"

# Serialization
bincode = "1.3"
msgpack = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = ["."] 