[package]
name = "wcv-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[lib]
path = "src/lib.rs"

[features]
default = [ "std" ]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 